<resources>
    <string name="test">Test String</string>
    <string name="app_name">Smile</string>

    <string name="title_home_page">Barber</string>
    <string name="title_user_info">UserInfo</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="title_rapid_barber">Rapid Barber</string>
    <string name="content_rapid_barber">Rapid Barber</string>
    <string name="title_activity_poi_search">PoiSearchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="location_tip">Current Location:</string>
    <string name="m">M</string>
    <string name="km">KM</string>
    <string name="title_activity_pay">Pay</string>
    <string name="pay_method">Pay Method</string>
    <string name="method_wei_xin">WeiXin</string>
    <string name="method_zhi_fu_bao">ZhiFuBao</string>
    <string name="paying">Paying...</string>
    <string name="order_info">OrderInfo</string>
    <string name="user_name">UserName：</string>
    <string name="service_name">ServiceName：</string>
    <string name="order_money_amount">Order：</string>
    <string name="order_pay">Pay</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_red_packet">RedPacketActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>

</resources>
