<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dragon.smile.PayActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 订单信息 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/order_info_item_bg">

                <TextView
                    android:id="@+id/order_info_id"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/activity_pay_divider"
                    android:gravity="center"
                    android:text="@string/order_info"
                    android:textSize="@dimen/activity_pay_text_size_2" />


                <!-- 商户名称 -->
                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/order_info_id"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/user_name"
                    android:textSize="@dimen/activity_pay_text_size_1" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/order_info_id"
                    android:layout_toRightOf="@id/user_id"
                    android:text="@string/test"
                    android:textSize="@dimen/activity_pay_text_size_1" />

                <!-- 服务项目 -->
                <TextView
                    android:id="@+id/service_id"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/user_id"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/service_name"
                    android:textSize="@dimen/activity_pay_text_size_1" />

                <TextView
                    android:id="@+id/service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/user_id"
                    android:layout_toRightOf="@id/service_id"
                    android:text="@string/test"
                    android:textSize="@dimen/activity_pay_text_size_1" />

                <!-- 订单金额 -->
                <TextView
                    android:id="@+id/order_money_id"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/service_id"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="15dip"
                    android:text="@string/order_money_amount"
                    android:textSize="@dimen/activity_pay_text_size_2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_money_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/service_id"
                    android:layout_marginTop="15dip"
                    android:layout_toRightOf="@id/order_money_id"
                    android:text="@string/test"
                    android:textSize="@dimen/activity_pay_text_size_2"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!-- 红包 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/order_info_item_bg">

                <TextView
                    android:id="@+id/order_info_red_packet"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/activity_pay_divider"
                    android:gravity="center"
                    android:text="@string/break_info"
                    android:textSize="@dimen/activity_pay_text_size_2" />

                <TextView
                    android:id="@+id/pay_red_packet_1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/order_info_red_packet"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:gravity="center_vertical"
                    android:text="@string/red_packet_size"
                    android:textSize="@dimen/activity_pay_text_size_1" />

                <TextView
                    android:id="@+id/pay_red_packet_2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/order_item_height"
                    android:layout_below="@id/order_info_red_packet"
                    android:layout_toRightOf="@id/pay_red_packet_1"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/activity_pay_text_size_1" />

            </RelativeLayout>


            <!-- 支付方式 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/order_info_item_bg">

                <TextView
                    android:id="@+id/pay_method_id"
                    android:layout_width="match_parent"
                    android:layout_height="36dip"
                    android:background="@drawable/activity_pay_divider"
                    android:gravity="center"
                    android:text="@string/pay_method"
                    android:textSize="@dimen/activity_pay_text_size_2" />

                <RadioGroup
                    android:id="@+id/pay_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pay_method_id"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip">

                    <RadioButton
                        android:id="@+id/pay_method_wei_xin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/order_item_height"
                        android:checked="true"
                        android:text="@string/method_wei_xin"
                        android:textSize="@dimen/activity_pay_text_size_1" />

                    <RadioButton
                        android:id="@+id/pay_method_zhi_fu_bao"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/order_item_height"
                        android:text="@string/method_zhi_fu_bao"
                        android:textSize="@dimen/activity_pay_text_size_1" />

                </RadioGroup>


            </RelativeLayout>


            <Button
                android:id="@+id/button_pay"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/pay"
                android:text="@string/order_pay"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_pay_text_size_2" />


        </LinearLayout>


    </ScrollView>
</FrameLayout>